--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.3.2",
     "lucide-react": "^0.363.0",
-    "next": "15.0.3",
+    "next": "^16.0.10",
     "next-themes": "^0.3.0",
-    "react": "18.3.1",
+    "react": "^19.2.3",
     "react-day-picker": "^9.12.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "recharts": "^3.6.0",
     "slugify": "^1.6.6",
