--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.65.0",
     "recharts": "^3.6.0",
+    "rss-parser": "^3.13.0",
     "slugify": "^1.6.6",
     "sonner": "^1.5.0",
     "swiper": "^12.0.2",
